objects/BMCServiceDesk__BroadcastHistory__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpBroadcastHistory</customHelpPage>
    <description>This object allows you to store data that tracks the history of all actions that have been performed on broadcasts.</description>
    <fields>
        <fullName>BMCServiceDesk__FKActions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the user-defined actions that are applicable to broadcasts. User-defined actions are used to record details of the steps taken to manage the issue or outage that caused the broadcast.</inlineHelpText>
        <label>Action</label>
        <referenceTo>BMCServiceDesk__Action__c</referenceTo>
        <relationshipLabel>Broadcast History</relationshipLabel>
        <relationshipName>Broadcast_Histroy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBroadcast__c</fullName>
        <label>Broadcast ID</label>
        <referenceTo>BMCServiceDesk__Broadcasts__c</referenceTo>
        <relationshipLabel>Action History</relationshipLabel>
        <relationshipName>Broadcast_Histroy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStaff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field holds assigned staff information from parent record.</description>
        <inlineHelpText>This field holds assigned staff information from parent record.</inlineHelpText>
        <label>Current Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Broadcast_Histories_Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff.</inlineHelpText>
        <label>Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Broadcast_Histroy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__actionId__c</fullName>
        <formula>BMCServiceDesk__FKActions__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the user-defined actions that are applicable to broadcasts. User-defined actions are used to record details of the steps taken to manage the issue or outage that caused the broadcast.</inlineHelpText>
        <label>Action~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__broadCastId__c</fullName>
        <formula>BMCServiceDesk__FKBroadcast__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broadcast ID~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__broadcastNote__c</fullName>
        <formula>BMCServiceDesk__FKBroadcast__r.BMCServiceDesk__note__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broadcast Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__date__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the history record is created. If required, you can use this field to select a different date and time from the automatically filled in date and time for user-defined actions.</inlineHelpText>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__description__c</fullName>
        <inlineHelpText>This field is automatically set to the description of the user-defined action selected in the Action ID field. This description explains what the selected Action ID represents.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__duration__c</fullName>
        <inlineHelpText>Use this field to enter the time that you spend performing this action.</inlineHelpText>
        <label>Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the action record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__note__c</fullName>
        <inlineHelpText>Use this field to provide details about what has been accomplished when you performed this action. The date and time is recorded for each new entry or update that you make in this field.</inlineHelpText>
        <label>Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__system__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__userId__c</fullName>
        <formula>BMCServiceDesk__FKUser__r.Username</formula>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff.</inlineHelpText>
        <label>Staff ID~</label>
        <type>Text</type>
    </fields>
    <label>Broadcast History</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broadcast History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__actionIDRequired</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKActions__c) , ISBLANK(BMCServiceDesk__FKActions__c))</errorConditionFormula>
        <errorMessage>Please enter Action.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__broadcastHistoryStaffIDRequired</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKUser__c) , ISBLANK(BMCServiceDesk__FKUser__c))</errorConditionFormula>
        <errorMessage>Please enter Staff ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__durationFormatValidation</fullName>
        <active>true</active>
        <description>duration should be in format hh:mm</description>
        <errorConditionFormula>AND(NOT(REGEX( BMCServiceDesk__duration__c , &apos;[0-9]{2}:[0-9]{2}&apos;)), NOT(OR(ISNULL(BMCServiceDesk__duration__c), ISBLANK(BMCServiceDesk__duration__c) )  ))</errorConditionFormula>
        <errorMessage>Please enter duration in the format hh:mm</errorMessage>
    </validationRules>
</CustomObject>